[gd_scene load_steps=3 format=3 uid="uid://bs5hnec605087"]

[ext_resource type="Script" uid="uid://jq0hdclqi3hx" path="res://scripts/menu/main_menu.gd" id="1_nl8w3"]
[ext_resource type="PackedScene" uid="uid://coyftkg3qxgoc" path="res://scenes/menu/settings_menu.tscn" id="2_3rkf3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nl8w3")

[node name="MainMenuContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -80.0
offset_right = 179.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="StoryBtn" type="Button" parent="MainMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "KEY_HISTORY"

[node name="ArenaBtn" type="Button" parent="MainMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "KEY_ARENA"

[node name="SettingsBtn" type="Button" parent="MainMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "KEY_SETTINGS"

[node name="HSeparator" type="HSeparator" parent="MainMenuContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ExitBtn" type="Button" parent="MainMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "KEY_EXIT"

[node name="SettingsMenu" parent="." node_paths=PackedStringArray("back_menu") instance=ExtResource("2_3rkf3")]
unique_name_in_owner = true
visible = false
layout_mode = 1
back_menu = NodePath("../MainMenuContainer")

[connection signal="pressed" from="MainMenuContainer/ArenaBtn" to="." method="_on_arena_btn_pressed"]
[connection signal="pressed" from="MainMenuContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MainMenuContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
